fixing window height on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -178,4 +178,8 @@
   .email::placeholder {
     text-align: center;
   }
+
+  .container {
+    height: 100dvh;
+  }
 }
